--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,6 +33,6 @@
   <![endif]-->
 
   <!-- API Key: AIzaSyC9xo7Bq4vAjsaRrk00YSjzTUrJKZJucMk -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9xo7Bq4vAjsaRrk00YSjzTUrJKZJucMk&v=3.exp&sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9xo7Bq4vAjsaRrk00YSjzTUrJKZJucMk&v=3.exp"></script>
   <script src="/public/js/gmap.js"></script>
 </head>
