--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,4 +35,5 @@
   <!-- API Key: AIzaSyC9xo7Bq4vAjsaRrk00YSjzTUrJKZJucMk -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9xo7Bq4vAjsaRrk00YSjzTUrJKZJucMk&v=3.exp&sensor=false"></script>
   <script src="/public/js/gmap.js"></script>
+  <script src="/public/js/jquery-1.11.2.min.js"></script>
 </head>
