--- a/_sass/_template.scss
+++ b/_sass/_template.scss
@@ -2,28 +2,31 @@ body {
 
 }
 
-/* typography */
+/** typography **/
 
-/* other styles */
+/** other styles **/
 
-.header {
-	position: relative;
-	background: url(/public/img/header-bg.png) repeat-x center center;
-	clear: both;
-	height: 180px;
-	width: 100%;
-	overflow: hidden;
+.header
+{
+  position: relative;
+  background: url(/public/img/header-bg.png) repeat-x center center;
+  clear: both;
+  height: 180px;
+  width: 100%;
+  overflow: hidden;
 }
 
-.header .nonplax-layer {
+.header .nonplax-layer
+{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 180px;    
+    height: 180px;
 }
 
-.header .plax-layer {
+.header .plax-layer
+{
     position: absolute;
     top: 0;
     left: 0;
@@ -33,54 +36,64 @@ body {
     height: 180px;
 }
 
-.header .layer1 {
-	background-image: url(/public/img/header-stones1.png);
+.header .layer1
+{
+  background-image: url(/public/img/header-stones1.png);
 }
 
-.header .layer2 {
-	background-image: url(/public/img/header-stones2.png);
+.header .layer2
+{
+  background-image: url(/public/img/header-stones2.png);
 }
 
-.header .ground {
-	background: url(/public/img/header-grass.png) repeat-x center 0;
+.header .ground
+{
+  background: url(/public/img/header-grass.png) repeat-x center 0;
 }
 
-.actor1, .actor2, .actor3 {
-	position: absolute;
-	top: 149px;
-	left: -42px;
-	width: 42px;
-	height: 30px;
-	background: url(/public/img/cyclist1.gif) bottom no-repeat;
+.actor1, .actor2, .actor3
+{
+  position: absolute;
+  top: 149px;
+  left: -42px;
+  width: 42px;
+  height: 30px;
+  background: url(/public/img/cyclist1.gif) bottom no-repeat;
 }
 
-.actor2 {
-	left: -136px;
-	background-image: url(/public/img/cyclist2.gif);
+.actor2
+{
+  left: -136px;
+  background-image: url(/public/img/cyclist2.gif);
 }
 
-.actor3 {
-	left: -84px;
-	background-image: url(/public/img/cyclist3.gif);
+.actor3
+{
+  left: -84px;
+  background-image: url(/public/img/cyclist3.gif);
 }
 
-.content {
+.content
+{
   padding: 40px 15px;
 }
 
-.navbar {
-	border: none;
-	border-radius: 0;
-	background: rgb(127, 173, 113) url(/public/img/navbar-grass.png) 0 180px  repeat-x;
+.navbar
+{
+  border: none;
+  border-radius: 0;
+  background: rgb(127, 173, 113) url(/public/img/navbar-grass.png) 0 180px  repeat-x;
 }
 
 .nav > li > a, 
-.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
-	color: rgb(255, 255, 255) !important;
+.navbar-inverse .navbar-nav .open .dropdown-menu>li>a
+{
+  color: rgb(255, 255, 255) !important;
 }
 
-.navbar .navbar-collapse {
-	border-color: rgba(0, 0, 0, 0.1);
+.navbar .navbar-collapse
+{
+  border-color: rgba(0, 0, 0, 0.1);
 }
 
 .navbar-inverse .navbar-nav>.open>a,
@@ -89,150 +102,206 @@ body {
 .nav>li>a:hover,
 .nav>li>a:focus,
 .dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus {
-	background-color: rgba(176, 228, 106, 0.6) !important;
+.dropdown-menu>li>a:focus
+{
+  background-color: rgba(176, 228, 106, 0.6) !important;
 }
 
-.navbar-inverse .navbar-toggle {
-	border-color: rgba(255, 255, 255, 0.7);
+.navbar-inverse .navbar-toggle
+{
+  border-color: rgba(255, 255, 255, 0.7);
 }
 
-.navbar .dropdown-menu {
-	background-color:  rgb(127, 173, 113);
-	border-top: 0;
+.navbar .dropdown-menu
+{
+  background-color:  rgb(127, 173, 113);
+  border-top: 0;
 }
 
-/* panel-custom */
 
-.bs-panel-custom {
-	position: relative;
-	padding: 45px 15px 15px;
-	margin: 0 -15px 15px;
-	margin-right: 0;
-	margin-left: 0;
-	background-color: #fff;
-	border-color: #ddd;
-	border-style: solid;
-	border-width: 1px;
-	border-radius: 4px;
-	-webkit-box-shadow: none;
-	box-shadow: none;
+/** panel-custom **/
+
+.bs-panel-custom
+{
+  position: relative;
+  padding: 45px 15px 15px;
+  margin: 0 -15px 15px;
+  margin-right: 0;
+  margin-left: 0;
+  background-color: #fff;
+  border-color: #ddd;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
-.bs-panel-custom:after {
-	position: absolute;
-	top: 15px;
-	left: 15px;
-	font-size: 12px;
-	font-weight: 700;
-	color: #959595;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	content: "";
+.bs-panel-custom:after
+{
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #959595;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  content: "";
 }
 
-.bs-panel-custom.vk:after {
-	content: "Я ВКонтакте";
+.bs-panel-custom.vk:after
+{
+  content: "Я ВКонтакте";
 }
 
-/* footer */
 
-.bs-footer {
-	padding-top: 40px;
-	padding-bottom: 40px;
-	margin-top: 100px;
-	color: #777;
-	text-align: center;
-	border-top: 1px solid #e5e5e5;
+/** footer **/
+
+.bs-footer
+{
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-top: 100px;
+  color: #777;
+  text-align: center;
+  border-top: 1px solid #e5e5e5;
 }
 
-.bs-social {
-	display: none;
-	margin-bottom: 20px;
-	text-align: center;
+.bs-social
+{
+  display: none;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
-.bs-social .counters {
-	display: inline-block;
-	padding-left: 0;
-	margin-bottom: 0;
-	list-style: none;
+.bs-social .counters
+{
+  display: inline-block;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
-.bs-social .counters li {
-	display: inline-block;
-	padding: 5px 8px;
-	line-height: 1;
+.bs-social .counters li
+{
+  display: inline-block;
+  padding: 5px 8px;
+  line-height: 1;
 }
 
-/* contacts */
 
-.contacts {
-	clear: both;
-	width: 100%;
-	margin-bottom: 10px;
+/** outfit **/
+.section
+{
+  position: relative;
+  min-width: 600px;
 }
 
-.gmap-container {
-	clear: both;
-	margin: 0px;
-	padding: 0px;
-	height: 0;
-	overflow: hidden;
+.img-container
+{
+  min-height: 900px;
 }
 
-.gmap {
-	clear: both;
-	margin: 0px;
-	padding: 0px;
-	height: 400px;
+.links
+{
+  padding: 2px;
+  width: 100%;
+  padding-right: 365px;
 }
 
-/* calculator /
-
-.calc_form {
-	display: block;
-	float: right;
-	line-height: 100%;
-	margin-left: 15px;
-	width: 265px;
-}
-.calc_form .line { 
-	clear: both; 
-	padding: 6px 2px 3px; 
+.links a
+{
+  float: left;
+  display: inline-block;
+  overflow: hidden;
+  width: 50px;
+  height: 60px;
+  margin: 2px;
 }
 
-.select {
-	background: url(../img/input.png) no-repeat right -24px;
-	border: 1px solid rgb(204, 204, 204);
-	display: inline-block;
-	height: 20px;
-	margin: -1px 4px 0 4px;
-	overflow: hidden;
-	vertical-align: middle;
-	width: 80px;
-}
-.select select {
-	background: transparent;
-	border: 0;
-	height: 20px;
-	padding: 1px 2px;
-	width: 100px;
-	font-size: 12px;
-	line-height: 12px;
+.links a.active
+{
+  outline: 4px solid #f57900;
 }
 
-input[type="checkbox"], input[type="radio"] { display: none; }
-input[type="checkbox"] + label.input, input[type="radio"] + label.input {
-	display: inline-block;
-	height: 12px;
-	margin: -1px 4px 0 4px;
-	vertical-align: middle;
-	width: 12px;
+.links  img
+{
+  width: 50px;
 }
 
-input[type="checkbox"] + label.input { background: url(../img/input.png) 0 0 no-repeat; }
-input[type="checkbox"]:checked + label.input { background-position: -12px 0; }
+.img
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  overflow: hidden;
+}
 
-input[type="radio"] + label.input { background: url(../img/input.png) 0 -12px no-repeat; }
-input[type="radio"]:checked + label.input { background-position: -12px -12px; }*/
+.img,
+.img img
+{
+  width: 365px;
+}
+
+
+/** contacts **/
+
+.contacts
+{
+  clear: both;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.gmap-container
+{
+  clear: both;
+  margin: 0px;
+  padding: 0px;
+  height: 0;
+  overflow: hidden;
+}
+
+.gmap
+{
+  clear: both;
+  margin: 0px;
+  padding: 0px;
+  height: 400px;
+}
+
+
+/** calculator **/
+
+.calculator .cloth
+{
+  padding-top: 2rem !important;
+}
+
+.calculator label
+{
+  clear: both;
+  float:left;
+  height: 3rem;
+  line-height: 3rem;
+  text-align: right;
+  font-weight: normal;
+}
+
+.calculator input,
+.calculator select
+{
+  float: right;
+  height: 3rem;
+}
+
+
+/** faq **/
+
+.zero:before {
+   content: '0. ';
+   margin-left: -17px;
+}
+
