paint-bucket-app

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,6 +26,7 @@
                 <li><a href="/contacts">Контакты</a></li>
                 <li><a href="/calculator">Калькулятор</a></li>
                 <li><a href="/faq">Ответы&nbsp;на&nbsp;вопросы</a></li>
+                <li><a target="_blank" href="/paint">Сам себе дизайнер</a></li>
             </ul>
         </div>
         <!-- </menu> -->
