--- a/_sass/_template-winter.scss
+++ b/_sass/_template-winter.scss
@@ -1,43 +1,43 @@
-.header .ground {
+.winter-season .header .ground {
   background: url(/public/img/header-snow.png) repeat-x center 0;
 }
 
-.actor1 {
+.winter-season .actor1 {
   background-image: url(/public/img/skier1.gif);
 }
 
-.actor2 {
+.winter-season .actor2 {
   background-image: url(/public/img/skier2.gif);
 }
 
-.actor3 {
+.winter-season .actor3 {
   background-image: url(/public/img/skier3.gif);
 }
 
-.navbar {
+.winter-season .navbar {
   background-image: url(/public/img/navbar-snow.png) !important;
   background-color: rgb(243, 245, 255);
 }
 
-.nav > li > a, 
-.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+.winter-season .nav > li > a,
+.winter-season .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
   color: rgb(121, 124, 143) !important;
 }
 
-.navbar-inverse .navbar-nav>.open>a,
-.navbar-header .navbar-toggle:hover,
-.navbar-header .navbar-toggle:focus,
-.nav>li>a:hover,
-.nav>li>a:focus,
-.dropdown-menu>li>a:hover,
-.dropdown-menu>li>a:focus {
+.winter-season .navbar-inverse .navbar-nav>.open>a,
+.winter-season .navbar-header .navbar-toggle:hover,
+.winter-season .navbar-header .navbar-toggle:focus,
+.winter-season .nav>li>a:hover,
+.winter-season .nav>li>a:focus,
+.winter-season .dropdown-menu>li>a:hover,
+.winter-season .dropdown-menu>li>a:focus {
   background-color: rgba(190, 230, 235, 0.6) !important;
 }
 
-.navbar-inverse .navbar-toggle {
+.winter-season .navbar-inverse .navbar-toggle {
   border-color: rgba(190, 230, 235, 0.7);
 }
 
-.navbar-inverse .navbar-toggle .icon-bar {
+.winter-season .navbar-inverse .navbar-toggle .icon-bar {
   background-color: rgb(190, 230, 235) !important;
 }
