--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,6 @@
       </div>
       <div class="col-md-3">
           <div id="vk_groups"></div>
-          <script src="//vk.com/js/api/openapi.js?83"></script>
-          <script>
-          VK.Widgets.Group("vk_groups", {
-              mode: 0,
-              width: "200",
-              height: "320"
-          }, 49500436);
-          </script>
       </div>
     </div>
   </div>
@@ -39,6 +31,9 @@
 <!-- <footer> -->
   {% include footer.html %}
 <!-- <footer> -->
+
+<!-- scripts -->
+{% include scripts.html %}
 
 </body>
 </html>
