--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,4 +43,26 @@
 </footer>
 
 <!-- VK Widget -->
-<div id="vk_community_messages"></div>
+<div id="vk_community_messages">
+    <div class="vk-tooltip">Задать вопрос</div></div>
+<style>
+    .vk-tooltip {
+        z-index: -1;
+        position: absolute;
+        top: 5px;
+        right: 70px;
+
+        padding: 0 20px 0;
+        height: 40px;
+
+        border: none;
+        border-radius: 5px;
+
+        background-color: rgba(255,255,255,1);
+
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+        line-height: 40px;
+        white-space: nowrap;
+    }
+</style>
