--- a/_includes/calculator.html
+++ b/_includes/calculator.html
@@ -3,13 +3,12 @@
 {% if calc %}
 <div id="calculator" class="calculator">
 
+    <div class="alert alert-primary">
+        <b>Итого:</b>
+        <span id="calculator_total">0</span>&nbsp;руб.
+    </div>
     <div class="alert alert-light">
-        <p>
-            <b>Итого:</b>
-            <span id="calculator_total">0</span>&nbsp;руб.
-        </p>
-        <hr>
-        <p class="font-italic">* Подобрать варианты сочетаний цветов в куртке можно в разделе "<a href="/paint" target="_blank">Сам себе дизайнер</a>"</p>
+        <span class="font-italic">* Подобрать варианты сочетаний цветов в куртке можно в разделе "<a href="/paint" target="_blank">Сам себе дизайнер</a>"</span>
     </div>
 
     <div class="card-columns">
