--- a/_sass/template/_layout.scss
+++ b/_sass/template/_layout.scss
@@ -3,16 +3,14 @@ $header-gradient-end-color:   #E1F5FE;
 $body-gradient-start-color: #9ccc65;
 $body-gradient-end-color:   #33691e;
 
-$body-gradient-start: 180px;
+$body-gradient-start: 220px;
 $body-gradient-end: 100%;
 
 body {
-
-  //background: url(/public/img/background.jpg) center center fixed;
   background-color: $body-gradient-end-color;
-  background: -moz-linear-gradient(180deg, $body-gradient-start-color $body-gradient-start, $body-gradient-end-color $body-gradient-end) repeat-x;
-  background: -webkit-linear-gradient(180deg, $header-gradient-start-color 0, $header-gradient-end-color $body-gradient-start, $body-gradient-start-color $body-gradient-start, $body-gradient-end-color $body-gradient-end) repeat-x;
-  background: linear-gradient(180deg, $header-gradient-start-color 0, $header-gradient-end-color $body-gradient-start,  $body-gradient-start-color $body-gradient-start, $body-gradient-end-color $body-gradient-end) repeat-x;
+  background:    -moz-linear-gradient(180deg, $header-gradient-start-color 0, $header-gradient-start-color 20px, $header-gradient-end-color $body-gradient-start, $body-gradient-start-color $body-gradient-start, $body-gradient-end-color $body-gradient-end) repeat-x;
+  background: -webkit-linear-gradient(180deg, $header-gradient-start-color 0, $header-gradient-start-color 20px, $header-gradient-end-color $body-gradient-start, $body-gradient-start-color $body-gradient-start, $body-gradient-end-color $body-gradient-end) repeat-x;
+  background:         linear-gradient(180deg, $header-gradient-start-color 0, $header-gradient-start-color 20px, $header-gradient-end-color $body-gradient-start, $body-gradient-start-color $body-gradient-start, $body-gradient-end-color $body-gradient-end) repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="$body-gradient-start",endColorstr="$body-gradient-end",GradientType=1) repeat-x;
 }
 
@@ -44,6 +42,57 @@ body {
   }
 }
 
+.mobile-nav {
+  width: 100%;
+
+  background-color: #51baf9;
+
+  .navbar {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .navbar-toggler {
+    outline: none;
+    border: 0;
+  }
+
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+   }
+
+  .navbar-toggler-label {
+    padding-left: 0.5rem;
+    font-size: 1rem;
+    line-height: 30px;
+    color: white;
+  }
+
+  .navbar-nav {
+    justify-content: center;
+    width: 100%;
+
+    .nav-item {
+      margin-left: .5rem;
+      margin-right: .5rem;
+
+    }
+
+    .nav-link {
+      color: rgba(255,255,255,0.75);
+
+      &:hover {
+        color: rgba(255,255,255,1);
+      }
+    }
+
+    .nav-link.active {
+      font-weight: 600;
+    }
+  }
+}
+
+
 .header {
   padding: 0;
 
@@ -66,7 +115,8 @@ body {
   overflow: hidden;
   padding: 0;
 
-  border-radius: 0 0 2px 2px;
+  border-radius: 2px;
+  //border-radius: 0 0 2px 2px;
 
   background-color: rgba(255,255,255,1);
 
