--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,6 +30,7 @@
 <div class="bigstage">
     <canvas id="stage"></canvas>
     <div class="container stage-logo"></div>
+    <a class="stage-link" href="/"></a>
 </div>
 
 {% comment %}
