--- a/_includes/calculator.html
+++ b/_includes/calculator.html
@@ -8,7 +8,7 @@
         <span id="calculator_total">0</span>&nbsp;руб.
     </div>
     <div class="alert alert-light">
-        <span class="font-italic">* Подобрать варианты сочетаний цветов в куртке можно в разделе "<a href="/paint" target="_blank">Сам себе дизайнер</a>"</span>
+        <span class="font-italic">* Подобрать варианты сочетаний цветов в куртке можно в разделе "<a href="/_paint_old" target="_blank">Сам себе дизайнер</a>"</span>
     </div>
 
     <div class="card-columns">
