--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,7 +1,13 @@
-{% for item in site.data.scripts %}
-<script src="/public/{{item}}.js"></script>
-{% endfor %}
+<script src="/public/js/jquery-1.11.2.min.js"></script>
+<script src="/public/js/bootstrap-v4/bootstrap.min.js"></script>
+<script src="/public/vendor/slick/slick.min.js"></script>
 
+<script src="/public/js/app/scene.js"></script>
+<script src="/public/js/app/calculator.js"></script>
+<script src="/public/js/app/paint.js"></script>
+<script src="/public/js/app/main.js"></script>
+
+{% comment %}
 <!-- VK Group -->
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?83"></script>
 <script type="text/javascript">
@@ -26,6 +32,7 @@
 <!-- Yandex.Metrika counter -->
 <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter42538299 = new Ya.Metrika({ id:42538299, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/42538299" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+{% endcomment %}
 
 <!-- Deprecated -->
 <!--
