--- a/_sass/template/_layout.scss
+++ b/_sass/template/_layout.scss
@@ -397,3 +397,53 @@ body {
   pointer-events: none;
 }
 */
+
+
+// Paint
+.paint-container {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  border-radius: 0;
+
+  .canvas-paint-container {
+    overflow-x: auto;
+
+    .canvas-paint {
+      display: block;
+      margin: 0 auto;
+    }
+  }
+
+  .canvas-palette-container {
+    background-color: rgba(255, 255, 255, 0.8);
+
+    .btn {
+      display: block;
+      margin: 1rem auto;
+      width: 215px;
+    }
+
+    .canvas-palette {
+      padding: 1rem 0;
+      text-align: center;
+
+      div {
+        display: inline-block;
+        margin: 10px;
+        padding: 0;
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+      }
+
+      div.active {
+        -moz-box-shadow:    0px 0px 0px 5px rgba(255, 255, 255, 1), 0px 0px 0px 8px rgba(200, 200, 200, 0.8);
+        -webkit-box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 1), 0px 0px 0px 8px rgba(200, 200, 200, 0.8);
+        box-shadow:         0px 0px 0px 5px rgba(255, 255, 255, 1), 0px 0px 0px 8px rgba(200, 200, 200, 0.8);
+      }
+    }
+  }
+
+}
