--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,5 +33,5 @@
 <![endif]-->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9xo7Bq4vAjsaRrk00YSjzTUrJKZJucMk&v=3.exp&sensor=false"></script>
-<script src="/public/js/gmap.js"></script>
+<script src="/public/js/deprecated/gmap.js"></script>
 
