--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -17,6 +17,7 @@
     }, 49500436);
 </script>
 
+{% comment %}
 <!-- VK Widget -->
 <div id="vk_community_messages"><!--<div class="vk-tooltip">Задать вопрос</div>--></div>
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?159"></script>
@@ -33,6 +34,7 @@
 <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter42538299 = new Ya.Metrika({ id:42538299, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/42538299" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
 
+{% endcomment %}
 
 
 {% comment %}
