--- a/_sass/template/_base.scss
+++ b/_sass/template/_base.scss
@@ -34,3 +34,7 @@ section a,
 .custom-select {
   -webkit-appearance: none;
 }
+
+.canvas-palette-container .btn {
+  margin-bottom: 0 !important;
+}
