--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@ layout: compress
       {% include head.html %}
 
   </head>
-  <body class="winter">
+  <body class="summer">
 
     {{ content }}
 
