--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="container footer">
     <div class="row">
         <div class="col-md-6 col-sm-12">
-            <span>Copyright &copy; {{ site.title }} <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time></span>
+            <span>&copy; {{ site.title }} <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time></span>
         </div>
         <div class="col-md-6 col-sm-12 text-md-right">
-            <span>Создано <a href="{{ site.admin.url }}" target="_blank">{{ site.admin.name }}</a></span>
+            <span><a href="{{ site.admin.url }}" target="_blank" style="border: 0;">Сделано c ❤️</a></span>
         </div>
     </div>
 </footer>
