--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
 <meta property="og:title" content="{{ pagetitle | strip }}" />
 <meta property="og:image" content="{{ site.baseurl }}/public/img/logo.png" />
 
+<meta name="yandex-verification" content="bdccba9bba4380ca" />
+
 <title>{{ pagetitle | strip }}</title>
 
 <link rel="shortcut icon" href="{{ site.baseurl }}/public/img/favicon.ico">
