Replace google maps with yandex maps

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@ layout: base
         </section>
 
         <section class="section section-gmap">
-            <div class="gmap" id="gmap"></div>
+            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AlcpsA3bpVeCvQLgq_9XrCL09GQ7M5DX3&amp;width=100%25&amp;height=320&amp;lang=ru_RU&amp;scroll=true"></script>
         </section>
 
         <section class="section section-info">
